Minor edits to clean code